# Atlas-Realm

./: .env.example  AGENTS.md  README.md  docker-compose.yml  package.json  task.md
.agents/skills/atlas-server-oop-architecture/: SKILL.md
.agents/skills/atlas-server-oop-architecture/agents/: openai.yaml
.agents/skills/atlas-server-oop-architecture/references/: server-patterns.md
.claude/: settings.local.json
apps/desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/.agent/rules/: rotation-strategy.md
apps/desktop/docs/: api-gap-notes.md
apps/desktop/src/: App.css  App.tsx  types.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  models.rs  storage.rs  system.rs  tracker.rs
apps/desktop/src-tauri/src/detectors/: amazon.rs  epic.rs  metadata.rs  mod.rs  registry.rs  steam.rs  ubisoft.rs  utils.rs  xbox.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/components/: ActiveSession.tsx  DebugTools.tsx  GameList.tsx  SessionHistory.tsx  ShellLayout.tsx
apps/desktop/src/context/: AppDataContext.tsx  AuthContext.tsx
apps/desktop/src/lib/: api.ts  env.ts  library-sync.ts  tauri.ts
apps/desktop/src/pages/: AuthPage.tsx  HomePage.tsx  LibraryPage.tsx  ProfilePage.tsx  SessionsPage.tsx
apps/server/: .env.example  README.md  package.json  tsconfig.json
apps/server/.claude/: settings.local.json
apps/server/src/: app.ts  container.ts  index.ts
apps/server/src/cache/: index.ts
apps/server/src/config/: env.ts
apps/server/src/db/: seed.ts
(+104 files in other folders)
