[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
winreg = { version = "0.52", optional = true }
walkdir = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
urlencoding = "2"
base64 = "0.13"
once_cell = "1"
dotenvy = "0.15"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.52", features = [
    "Management_Deployment",
    "ApplicationModel",
    "Foundation",
    "Foundation_Collections",
    "Storage",
] }
